src/test/ui/dyn-star/check-size-at-cast-polymorphic-bad.stderr
error[E0277]: `&T` needs to be a pointer-sized type
  --> $DIR/check-size-at-cast-polymorphic-bad.rs:11:15
   |
LL |     dyn_debug(t);
   |               ^ `&T` needs to be a pointer-sized type
   |
   = help: the trait `PointerSized` is not implemented for `&T`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn polymorphic<T: Debug + ?Sized>(t: &T) where &T: PointerSized {
   |                                          ++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
